# stringhelpers

./: CMakeLists.txt  README.md  StringHelpers.cpp  StringHelpers.h
include/stringhelpers/: cpp_file.cpp  stringhelpers.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
